--- a/src/app/shared/components/social-media/social-media.component.html
+++ b/src/app/shared/components/social-media/social-media.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex items-center p-2 links rounded-full shadow-lg"
+  class="flex gap-3 items-center p-3 links rounded-full shadow-lg"
   [style.position]="position()"
   [class.fixed]="position() === 'fixed'"
 >
@@ -8,7 +8,7 @@
       <a
         [href]="music.link"
         target="_blank"
-        class="p-2 opacity-80 hover:opacity-100 hover:scale-110 transition duration-200 ease-in-out"
+        class="opacity-80 hover:opacity-100 hover:scale-110 transition duration-200 ease-in-out link"
       >
         <img
           width="26"
@@ -28,7 +28,7 @@
       <a
         [href]="social.link"
         target="_blank"
-        class="p-2 opacity-80 hover:opacity-100 hover:scale-110 transition duration-200 ease-in-out"
+        class="opacity-80 hover:opacity-100 hover:scale-110 transition duration-200 ease-in-out link"
       >
         <img
           width="26"
