feat: newsletter form

--- a/src/app/features/home/pages/home/home.page.html
+++ b/src/app/features/home/pages/home/home.page.html
@@ -4,4 +4,8 @@
   [backgroundImage]="'assets/images/home-intro.webp'"
 >
 </app-hero>
+<app-section>
+  <app-newsletter-form></app-newsletter-form>
+</app-section>
+
 <app-social-media [position]="'fixed'"></app-social-media>
