--- a/src/app/shared/components/hero/hero.component.html
+++ b/src/app/shared/components/hero/hero.component.html
@@ -14,4 +14,7 @@
     priority
     alt="Image de présentation du groupe JODOCK"
   />
+  @if (fullscreen()) {
+    <span class="material-symbols-outlined icon-down animate-bounce"> arrow_downward </span>
+  }
 </div>
